To prevent flickering

--- a/src/app/components/embedded-content/embedded-content.component.scss
+++ b/src/app/components/embedded-content/embedded-content.component.scss
@@ -1,4 +1,5 @@
 div {
   min-height: 280px;
   margin-bottom: -5px;
+  background-color: white;
 }
